# Machine_Learning_Connect4

./: CMakeLists.txt  Connect4.cpp  Connect4.h  Data_Source.csv  DecisionTree.h  FileMangement.cpp  FileMangement.h  File_Index.h  Node.cpp  ReadMe  main.cpp
Connect4/: Connect4.cpp
Data/: Data_Source.csv
File/: FileMangement.cpp  FileMangement.h  File_Index.h
Machine_Learning/: DecisionTree.cpp  ML_Agent.cpp  ML_Agent.h  Node.h  Test.cpp  Test.h
main/: main.cpp
